@@ -1,0 +1,3 @@
+rm Release.txt
+copy C:\sources\roms\TiEmu\RELEASE Release.txt
+cls
