@@ -118,6 +118,7 @@ currently, we can handle up to 80 keys.
       Ti-73            TI-82        TI-85        TI-89        TI-92                
                        TI-83        TI-86                     TI-92+               
                        TI-83+                                                      
+                       TI-84+										 Titanium
 
  0.   Y=               Y=           F1           F1           Grab (Hand)          
  1.   Window           Window       F2           F2           F1                   
