@@ -13,8 +13,10 @@ To do:
 	- [kevin] $1037: restrict to actual speed based on cycle count, not instruction count.
 	- [roms]  $1038: fixed Win32 multiple file selector
 	- [roms]  $1048: fixed calibration loop (updated on each engine restart)
-	- [roms]  $1051: added pgm_entry bkpt support in dbg_cause.c (merged from Kevin's branch)
+	- [roms]  $1059: added pgm_entry bkpt support in dbg_cause.c (merged from Kevin's branch)
 		need to remove 1 pgm entry bkpt limitation
+	- [kevin] $1079: don't start the engine when toggling "Restrict to actual speed" if it was stopped (crash fix).
+	- [roms]  $1080: TiEmu hang when using F10 instead of popup menu. Fixed.
 
 - 19/03/2005, version 1.80q:
 	- [roms] $985: updated copyright notice.
